# tolerances_bot

./: .env.example  .gitignore  .isort.cfg  alembic.ini  docker-compose.yaml  main.py  pyproject.toml  ruff.toml
app/adapters/: old_tolerance_adapter.py  tolerance_adapter.py  tolerance_value_adapter.py
app/constants/: db_enums.py
app/controllers/: conditions_controller.py  old_tolerance_controller.py  range_controller.py  tolerance_controller.py  tolerance_value_controller.py
app/handling/handlers/: commands.py
app/handling/shemas/: conditions.py
app/handling/states/: conditions_calc.py  find_tolerance.py  map_tolerance.py  start.py
app/locales/: stub.pyi
app/middlewares/: session.py
app/models/: __init__.py  old_tolerance.py  range.py  tolerance.py
app/models/m2m/: tolerance_value.py  tolerances_match.py
app/repositories/: main_repository.py
app/repositories/class_repositories/: old_tolerance_repository.py  range_repository.py  (+1 more)
app/schemas/: __init__.py
app/utils/: calculators.py  decorators.py  dialog_getters.py  i18n.py  parsers.py
core/: logger.py  routers.py  telegram_bot.py
core/config/: config.py
core/database/: __init__.py  db.py  declarative_base.py  executor.py  mixins.py
core/exceptions/: api_exception.py  base_exceptions.py  exception_handlers.py  exception_schemas.py  pydantic_errors_validation.py
core/middlewares/: __init__.py  i18n.py
core/redis/: redis_storage.py
data_load/: db_data_load.py
migrations/: env.py
migrations/versions/: e7b8d4616203_init.py
static/: tol_mapping.csv  tolerances_values.csv
(+50 files in other folders)
