[project]
name = "tolerances-bot"
version = "0.1.0"
description = ""
authors = [
    {name = "xardi",email = "vaedrath@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "pydantic-settings (>=2.10.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "greenlet (>=3.2.3,<4.0.0)",
    "ruff (>=0.12.0,<0.13.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)",
    "more-itertools (>=10.7.0,<11.0.0)",
    "isort (>=6.0.1,<7.0.0)",
    "aiogram (>=3.20.0.post0,<4.0.0)",
    "aiogram-dialog (>=2.3.1,<3.0.0)",
    "fluentogram (>=1.1.10,<2.0.0)",
    "redis (>=6.2.0,<7.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
